[gd_scene load_steps=11 format=3 uid="uid://bhfjhdpbuxtjv"]

[ext_resource type="Script" uid="uid://bq0n8vpnof088" path="res://scenes/GUI/bingo_main/bingo_board/gui_bingo_space.gd" id="1_j8165"]
[ext_resource type="Texture2D" uid="uid://cfmsjyfuan30j" path="res://resources/sprites/bingo/bingo_ball/bingo_ball_background.png" id="2_6wol2"]
[ext_resource type="PackedScene" uid="uid://vr2bq41a210f" path="res://scenes/GUI/bingo_main/shared/gui_symbol.tscn" id="3_vcgjf"]
[ext_resource type="AudioStream" uid="uid://ctkhv4tinr8ae" path="res://resources/sounds/SFX/bingo/symbol_display.wav" id="4_rtvum"]
[ext_resource type="AudioStream" uid="uid://bk4phlf11ayro" path="res://resources/sounds/SFX/bingo/bingo_power_up.wav" id="6_8655x"]
[ext_resource type="AudioStream" uid="uid://chfvjq5f63a25" path="res://resources/sounds/SFX/bingo/bingo_skill.wav" id="6_oxrtm"]
[ext_resource type="AudioStream" uid="uid://dir7ruadko01f" path="res://resources/sounds/SFX/bingo/bingo.wav" id="6_u0fak"]
[ext_resource type="AudioStream" uid="uid://cdk0ovqx36gi8" path="res://resources/sounds/SFX/bingo/bingo_space_removal.wav" id="9_rgpcp"]
[ext_resource type="AudioStream" uid="uid://c8aqmfoqm7egc" path="res://resources/sounds/SFX/bingo/bingo_space_trigger.wav" id="9_xmc86"]
[ext_resource type="AudioStream" uid="uid://bq08gxlapm5ut" path="res://resources/sounds/SFX/bingo/bingo_space_move.wav" id="12_83mkn"]

[node name="GUIBingoSpace" type="PanelContainer"]
custom_minimum_size = Vector2(20, 20)
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("1_j8165")

[node name="Background" type="NinePatchRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_6wol2")
region_rect = Rect2(0, 0, 22, 22)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="GUISymbol" parent="." instance=ExtResource("3_vcgjf")]
unique_name_in_owner = true
layout_mode = 2
enable_tooltips = true

[node name="DisplayAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_rtvum")
bus = &"SFX"

[node name="PowerUpAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_8655x")
volume_db = 5.0
bus = &"SFX"

[node name="SkillAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_oxrtm")
bus = &"SFX"

[node name="BingoAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_u0fak")
bus = &"SFX"

[node name="TriggerAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_xmc86")
bus = &"SFX"

[node name="RemovalAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_rgpcp")
bus = &"SFX"

[node name="MoveAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_83mkn")
bus = &"SFX"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="SpaceEffectContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/separation = 1

[node name="DehighlightCover" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
layout_mode = 2
texture = ExtResource("2_6wol2")
region_rect = Rect2(0, 22, 22, 22)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"HUD_small"
